--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,8 @@ flutter:
     - assets/images/clock.png
     - assets/images/dot.png
     - assets/images/filter.png
+    - assets/images/iconFacebook.png
+    - assets/images/iconGoogle.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
