--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,8 @@ flutter:
     - assets/images/filter.png
     - assets/images/iconFacebook.png
     - assets/images/iconGoogle.png
+    - assets/images/visibility_off.png
+    - assets/images/visibility_on.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
