--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
-
+  local_auth: ^2.1.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -62,27 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/homeicon.png
-    - assets/images/compassicon.png
-    - assets/images/bookmarkicon.png
-    - assets/images/profileicon.png
-    - assets/images/bts-vie-ngang-color 1.png
-    - assets/images/starcoin.png
-    - assets/images/Vector.png
-    - assets/images/kinhlup.png
-    - assets/images/image1.png
-    - assets/images/image 2.png
-    - assets/images/image 3.png
-    - assets/images/image 4.png
-    - assets/images/image 5.png
-    - assets/images/image 6.png
-    - assets/images/clock.png
-    - assets/images/dot.png
-    - assets/images/filter.png
-    - assets/images/iconFacebook.png
-    - assets/images/iconGoogle.png
-    - assets/images/visibility_off.png
-    - assets/images/visibility_on.png
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
