--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   local_auth: ^2.1.3
+  shared_preferences: ^2.0.15
   
 dev_dependencies:
   flutter_test:
